--- a/config/connection.ini
+++ b/config/connection.ini
@@ -1,16 +1,16 @@
 [ORACLE]
-dbname=ctpsdsqlsb
-user=YREN04_I
-password=APril!#2024
-host=sdraocbplora002.bmocm.com
-port=5121
-sid=ctpsdsqlsb
+dbname=234234
+user=username
+password=password
+host=23423423
+port=2344234
+sid=23423423
 driver=oracledb
 
 [cmrods_prd]
-dbname=cmrods_prd
-host=10.236.32.99
-port=5432
-user=yren04@ibg
-password=Winter2024!!@@
+dbname=234234
+host=234234
+port=234
+user=234234@ibg
+password=23423423!!@@
 driver=PostgreSQL Unicode(x64)
